# app/media_types.go
@@ -20,14 +20,38 @@ import (
 //
 // Identifier: application/vnd.account+json; view=default
 type Account struct {
-	// Date of creation
-	Created time.Time `form:"created" json:"created" xml:"created"`
-	ID      int       `form:"id" json:"id" xml:"id"`
+	GoogleUserID string    `form:"googleUserID" json:"googleUserID" xml:"googleUserID"`
+	LastLogin    time.Time `form:"lastLogin" json:"lastLogin" xml:"lastLogin"`
+	Name         *string   `form:"name,omitempty" json:"name,omitempty" xml:"name,omitempty"`
+	Picture      string    `form:"picture" json:"picture" xml:"picture"`
 }
 
 // Validate validates the Account media type instance.
 func (mt *Account) Validate() (err error) {
+	if mt.GoogleUserID == "" {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "googleUserID"))
+	}
+	if mt.Picture == "" {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "picture"))
+	}
 
+	return
+}
+
+// AccountCollection is the media type for an array of Account (default view)
+//
+// Identifier: application/vnd.account+json; type=collection; view=default
+type AccountCollection []*Account
+
+// Validate validates the AccountCollection media type instance.
+func (mt AccountCollection) Validate() (err error) {
+	for _, e := range mt {
+		if e != nil {
+			if err2 := e.Validate(); err2 != nil {
+				err = goa.MergeErrors(err, err2)
+			}
+		}
+	}
 	return
 }
 
