# swagger/swagger.yaml
@@ -5,28 +5,71 @@ consumes:
 - application/gob
 - application/x-gob
 definitions:
+  Account:
+    description: A account (default view)
+    example:
+      googleUserID: Et iure accusamus doloremque qui magnam assumenda.
+      lastLogin: 2012-02-25T05:57:31Z
+      name: In voluptas placeat est.
+      picture: Occaecati explicabo eos ipsa dolorem accusantium.
+    properties:
+      googleUserID:
+        example: Et iure accusamus doloremque qui magnam assumenda.
+        type: string
+      lastLogin:
+        example: 2012-02-25T05:57:31Z
+        format: date-time
+        type: string
+      name:
+        example: In voluptas placeat est.
+        type: string
+      picture:
+        example: Occaecati explicabo eos ipsa dolorem accusantium.
+        type: string
+    required:
+    - googleUserID
+    - picture
+    - lastLogin
+    title: 'Mediatype identifier: application/vnd.account+json; view=default'
+    type: object
+  AccountCollection:
+    description: AccountCollection is the media type for an array of Account (default
+      view)
+    example:
+    - googleUserID: Et iure accusamus doloremque qui magnam assumenda.
+      lastLogin: 2012-02-25T05:57:31Z
+      name: In voluptas placeat est.
+      picture: Occaecati explicabo eos ipsa dolorem accusantium.
+    - googleUserID: Et iure accusamus doloremque qui magnam assumenda.
+      lastLogin: 2012-02-25T05:57:31Z
+      name: In voluptas placeat est.
+      picture: Occaecati explicabo eos ipsa dolorem accusantium.
+    items:
+      $ref: '#/definitions/Account'
+    title: 'Mediatype identifier: application/vnd.account+json; type=collection; view=default'
+    type: array
   Message:
     description: A Message (default view)
     example:
-      auther: Voluptatem in voluptas placeat est beatae occaecati.
-      content: g4kyd6
-      created: 2015-05-18T10:20:41Z
-      id: 4.1725402e+18
+      auther: Aut laboriosam corporis ducimus beatae occaecati temporibus.
+      content: r4jwj9vhp
+      created: 2013-09-21T07:19:10Z
+      id: 5.176059e+18
     properties:
       auther:
-        example: Voluptatem in voluptas placeat est beatae occaecati.
+        example: Aut laboriosam corporis ducimus beatae occaecati temporibus.
         type: string
       content:
-        example: g4kyd6
+        example: r4jwj9vhp
         maxLength: 400
         minLength: 1
         type: string
       created:
-        example: 2015-05-18T10:20:41Z
+        example: 2013-09-21T07:19:10Z
         format: date-time
         type: string
       id:
-        example: 4.1725402e+18
+        example: 5.176059e+18
         format: int64
         type: integer
     required:
@@ -40,34 +83,34 @@ definitions:
     description: MessageCollection is the media type for an array of Message (default
       view)
     example:
-    - auther: Voluptatem in voluptas placeat est beatae occaecati.
-      content: g4kyd6
-      created: 2015-05-18T10:20:41Z
-      id: 4.1725402e+18
-    - auther: Voluptatem in voluptas placeat est beatae occaecati.
-      content: g4kyd6
-      created: 2015-05-18T10:20:41Z
-      id: 4.1725402e+18
+    - auther: Aut laboriosam corporis ducimus beatae occaecati temporibus.
+      content: r4jwj9vhp
+      created: 2013-09-21T07:19:10Z
+      id: 5.176059e+18
+    - auther: Aut laboriosam corporis ducimus beatae occaecati temporibus.
+      content: r4jwj9vhp
+      created: 2013-09-21T07:19:10Z
+      id: 5.176059e+18
     items:
       $ref: '#/definitions/Message'
     title: 'Mediatype identifier: application/vnd.message+json; type=collection; view=default'
     type: array
   MessagePayload:
     example:
-      auther: Consequatur molestias facilis.
-      content: wj9vhp
-      created: 2013-09-21T07:19:10Z
+      auther: Quas quas doloribus repudiandae tempora ut nihil.
+      content: oi6k48
+      created: 2000-04-16T11:52:34Z
     properties:
       auther:
-        example: Consequatur molestias facilis.
+        example: Quas quas doloribus repudiandae tempora ut nihil.
         type: string
       content:
-        example: wj9vhp
+        example: oi6k48
         maxLength: 400
         minLength: 1
         type: string
       created:
-        example: 2013-09-21T07:19:10Z
+        example: 2000-04-16T11:52:34Z
         format: date-time
         type: string
     required:
@@ -79,13 +122,13 @@ definitions:
   Room:
     description: A room (default view)
     example:
-      created: 1984-01-21T14:08:16Z
+      created: 1971-07-23T11:02:36Z
       description: room description
       name: room001
     properties:
       created:
         description: Date of creation
-        example: 1984-01-21T14:08:16Z
+        example: 1971-07-23T11:02:36Z
         format: date-time
         type: string
       description:
@@ -109,7 +152,10 @@ definitions:
   RoomCollection:
     description: RoomCollection is the media type for an array of Room (default view)
     example:
-    - created: 1984-01-21T14:08:16Z
+    - created: 1971-07-23T11:02:36Z
+      description: room description
+      name: room001
+    - created: 1971-07-23T11:02:36Z
       description: room description
       name: room001
     items:
@@ -118,13 +164,13 @@ definitions:
     type: array
   RoomPayload:
     example:
-      created: 1988-03-17T04:43:39Z
+      created: 2006-06-06T04:07:42Z
       description: room description
       name: room001
     properties:
       created:
         description: Date of creation
-        example: 1988-03-17T04:43:39Z
+        example: 2006-06-06T04:07:42Z
         format: date-time
         type: string
       description:
@@ -187,6 +233,67 @@ info:
   title: goa study chat
   version: ""
 paths:
+  /accounts:
+    get:
+      description: Retrieve account with given id or something
+      operationId: account#show
+      parameters:
+      - collectionFormat: multi
+        in: query
+        items:
+          type: string
+        name: ids
+        required: false
+        type: array
+      produces:
+      - application/vnd.goa.error
+      - application/vnd.account+json; type=collection
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/AccountCollection'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+        "404":
+          description: Not Found
+      schemes:
+      - http
+      summary: show account
+      tags:
+      - account
+  /accounts/me:
+    get:
+      description: |-
+        Retrieve my account
+
+        Required security scopes:
+          * `api:access`
+      operationId: account#showMe
+      produces:
+      - application/vnd.goa.error
+      - application/vnd.account+json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/Account'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+        "404":
+          description: Not Found
+      schemes:
+      - http
+      security:
+      - jwt:
+        - api:access
+      summary: showMe account
+      tags:
+      - account
   /rooms:
     get:
       description: Retrieve all rooms.
@@ -408,7 +515,7 @@ responses:
   OK:
     description: OK
     schema:
-      $ref: '#/definitions/Message'
+      $ref: '#/definitions/Account'
   Unauthorized:
     description: Unauthorized
 schemes:
